deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: guestbook
  name: guestbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook
  strategy: {}
  template:
    metadata:
      labels:
        app: guestbook
    spec:
      containers:
      - image: ibmcom/guestbook:v2
        imagePullPolicy: IfNotPresent
        name: guestbook
        resources: {}
        ports:
        - name: guestbook
          containerPort: 3000
status: {}
